Previous timed slide bug

--- a/index.html
+++ b/index.html
@@ -101,6 +101,7 @@
         <h2>Circular configuration</h2>
         <p>The slideshow can be configured to be circular, i.e. the last slide will transition back to the first slide. This can be accomplished with the <code>data-jump-to</code> attribute.</p>
         <p>This is particularly useful for sliders.</p>
+        <p>Otherwise by default, no next button will be rendered.</p>
     </div>
 </div>
 <script src="js/simpleslides.js"></script>
