--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
         <p>Automatic transitions to the next sequential slide can be enabled with the "data-timed-slide" attribute.</p>
         <p>The value of this attribute can be a floating point number or integer, representing the number of seconds before transitioning.</p>
     </div>
-    <div class="slide" id="slide11" data-prev-class="btn">
+    <div class="slide" id="slide11" data-prev-class="btn" data-button-class="btn" data-jump-to="slide1" data-button-text="Back to beginning">
         <h2>Circular configuration</h2>
         <p>The slideshow can be configured to be circular, i.e. the last slide will transition back to the first slide. This can be accomplished with the <code>data-jump-to</code> attribute.</p>
         <p>This is particularly useful for sliders.</p>
