--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <header>
     <title>Simple Slides Demo</title>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
+    <link rel="stylesheet" type="text/css" href="css/slides.css">
 </header>
 <body>
 <h1>Simple Slides Demo</h1>
@@ -100,8 +101,10 @@
     <div class="slide" id="slide11" data-prev-class="btn" data-button-class="btn" data-jump-to="slide1" data-button-text="Back to beginning">
         <h2>Circular configuration</h2>
         <p>The slideshow can be configured to be circular, i.e. the last slide will transition back to the first slide. This can be accomplished with the <code>data-jump-to</code> attribute.</p>
-        <p>This is particularly useful for sliders.</p>
-        <p>Otherwise by default, no next button will be rendered.</p>
+        <p>
+            This is particularly useful for sliders.
+            Otherwise by default, no next button will be rendered.
+        </p>
     </div>
 </div>
 <script src="js/simpleslides.js"></script>
