--- a/simple-slidesNEW.html
+++ b/simple-slidesNEW.html
@@ -108,6 +108,6 @@
     </div>
 </div>
 </div>   
-<script src="js/simpleslidesjs.js"></script>
+<script src="js/simpleslides.js"></script>
 </body>
 </html>
